--- a/style.css
+++ b/style.css
@@ -7,8 +7,14 @@ body {
 
 h1 {
 	font-size: 32px;
-  font-family: Palatino,"Palatino Linotype", serif;
-  color:rgb(121,149,117);
+	font-family: Palatino,"Palatino Linotype", serif;
+  	color:rgb(121,149,117);
+}
+h6 {
+  	font-size: 32px;
+  	font-family: Palatino,"Palatino Linotype", serif;
+  	color:rgb(121,149,117);
+}
 }
 
 h2 {
