--- a/style.css
+++ b/style.css
@@ -1,1 +1,8 @@
+.carousel-inner img {
+  width: 100%; /* Set width to 100% */
+  margin: auto;
+}
 
+#carouselImage1 {
+  background-image: url (http://i.imgur.com/un1UwJs.jpg);
+}
