--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Lato, sans-serif;
+  font-family: Verdana, sans-serif;
 }
 .carousel-inner img {
   width: 100%; /* Set width to 100% */
