--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@ body {
   width: 100%; /* Set width to 100% */
   margin: auto;
 }
+.carousel-caption {
+  display: flex !important;
+  align-items: center !important;
+}
