--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 .carousel-inner img {
   width: 100%; /* Set width to 100% */
   margin: auto;
+  
 }
 .carousel-caption h1 {
-  align-self:center;
+  vertical-align:middle;
 }
