--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: Verdana, sans-serif;
+  background-color:blue;
 }
 .carousel-inner img {
   width: 100%; /* Set width to 100% */
