--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
   font-family: Verdana, sans-serif;
-  background-color:blue;
 }
 .carousel-inner img {
   width: 100%; /* Set width to 100% */
@@ -10,5 +9,6 @@ body {
   font-size:125px;
 }
 #iconos {
-  background-color:blue;
+  background-color:#005ce6;
+  color:#80b3ff;
 }
