--- a/style.css
+++ b/style.css
@@ -12,3 +12,7 @@ body {
   background-color:#005ce6;
   color:#80b3ff;
 }
+nav{
+  background-color:#005ce6 !important;
+  color:#80b3ff !important;
+}
