--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ body {
 }
 #iconos {
   background-color:#005ce6;
-  color:#80b3ff;
+  color:white;
 }
 nav{
   background-color:#005ce6 !important;
-  color:#80b3ff !important;
+  color:white !important;
 }
