--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   background-color:#005ce6;
   color:white;
 }
-nav{
+.navbar {
   background-color:#005ce6 !important;
   color:white !important;
 }
